<resources>
    <string name="app_name">Price</string>
    <string name="AddDsicount"> <u>Add Discount</u></string>
    <string name="percent"> Percent</string>
    <string name="ForBranch"> For Branch</string>
    <string name="ForCategores"> For Categores</string>
    <string name="discount"> Discount</string>
    <string name="From"> From</string>
    <string name="Till"> Till</string>
    <string name="Save"> Save</string>

    <string name="Makeapp"> MakeApp</string>
    <string name="Manual"> Manual</string>
    <string name="Automated"> Automated Settings</string>
    <string name="For"> For Next</string>
    <string name="Or"> Or</string>
    <string name="OfferTiming">Offer Timimng</string>
    <string name="Mins"> Mins</string>
    <string name="Price"><u>Price Nego:</u></string>
    <string name="editprice"> Price</string>
    <string name="to"> To</string>
    <string name="auto">Auto</string>
    <string name="branch">Branch</string>
    <string name="categories">categories</string>
    <string name="end">End</string>

</resources>
