<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginTop="@dimen/ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginStart="@dimen/twenty"
            android:text="@string/Makeapp"
            android:textSize="@dimen/twenttytwo" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eighty"
            android:layout_marginStart="@dimen/eighty"
            android:textOff="@string/Manual"
            android:textOn="@string/auto" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginTop="@dimen/ten">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty"
                android:layout_marginStart="@dimen/twenty"
                android:text="@string/Automated"
                android:textSize="@dimen/twenttytwo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginTop="@dimen/ten">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty"
                android:layout_marginStart="@dimen/twenty"
                android:text="@string/For"
                android:textSize="@dimen/twenttytwo" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/oneeighty"
                android:layout_marginStart="@dimen/oneeighty"
                android:layout_marginRight="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginTop="@dimen/ten">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifty"
                android:layout_marginStart="@dimen/ten"
                android:text="@string/Or"
                android:textSize="@dimen/twenttytwo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginTop="@dimen/ten">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/From"
                android:textAlignment="center"
                android:textSize="@dimen/twenttytwo"
                android:inputType="text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/Till"
                android:textAlignment="center"
                android:textSize="@dimen/twenttytwo"
                android:inputType="text"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/oneforty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/Save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginTop="@dimen/fifty">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginStart="@dimen/twenty"
            android:layout_weight="0.7"
            android:text="@string/OfferTiming"
            android:textSize="@dimen/twenttytwo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/Mins"
            android:textSize="@dimen/twenttytwo"
            android:inputType="text"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginStart="@dimen/twenty"
            android:layout_weight="0.5"
            android:text="@string/AddDsicount"
            android:textSize="@dimen/twenttytwo" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginTop="@dimen/ten"
            android:clickable="true"
            android:text="@string/Price"
            android:textSize="@dimen/twenttytwo" />


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/Save" />


</LinearLayout>