<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/ten"
    android:layout_marginRight="@dimen/ten"
    android:layout_marginStart="@dimen/ten"
    android:layout_marginEnd="@dimen/ten"
    android:layout_marginTop="@dimen/ten">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editprice"
        android:textSize="@dimen/twenttytwo"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/twenty"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:textSize="@dimen/twenttytwo" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginLeft="@dimen/ten"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="@dimen/twenttytwo" />
        <com.extra.MultiSelectionSpinner
            android:id="@+id/input1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginLeft="@dimen/ten"
        android:layout_gravity="center">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eighty"
            android:layout_marginStart="@dimen/eighty"
            android:text="@string/From"
            android:textSize="@dimen/twenttytwo"
            android:inputType="text"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:text="@string/to"
            android:textSize="@dimen/twenttytwo"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:text="@string/end"
            android:textSize="@dimen/twenttytwo"
            android:inputType="text"
            android:layout_gravity="center"/>


    </LinearLayout>
    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Save"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/ten"/>


</LinearLayout>