<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/ten"
    android:layout_marginLeft="@dimen/ten"
    android:layout_marginTop="@dimen/margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount"
        android:textSize="@dimen/twenttytwo"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ForBranch"
            android:textSize="@dimen/twenttytwo"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ForCategores"
            android:textSize="@dimen/twenttytwo"/>
        <com.extra.MultiSelectionSpinner
            android:id="@+id/input1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textSize="@dimen/twenttytwo"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/five"/>
        <EditText
            android:id="@+id/edtx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/From"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="@dimen/twenttytwo"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Till"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="@dimen/twenttytwo"
            android:inputType="text"/>
    </LinearLayout>
    <Button
        android:id="@+id/savebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:textSize="@dimen/twenttytwo"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"/>

</LinearLayout>